flux/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: k8ty-api
  name: k8ty-api
