flux/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8ty-api
  labels:
    app: k8ty-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8ty-api
  template:
    metadata:
      labels:
        app: k8ty-api
    spec:
      containers:
        - name: k8ty-api
          image: ghcr.io/k8ty-app/k8ty-api:0.0.1-latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /_health
              port: 9000
          readinessProbe:
            httpGet:
              path: /_health
              port: 9000
          resources: {}
---
