flux/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8ty-api
  namespace: k8ty-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - api.k8ty.app
      secretName: k8ty-api-tls
  rules:
    - host: api.k8ty.app
      http:
        paths:
          - path: /
            backend:
              serviceName: k8ty-api
              servicePort: 9000
